Removes email address

--- a/lang/paypal-donations-sv_SE.po
+++ b/lang/paypal-donations-sv_SE.po
@@ -4,8 +4,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/paypal-donations\n"
 "POT-Creation-Date: 2013-03-09 16:48+0700\n"
 "PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team:  <artstorm@gmail.com>\n"
+"Last-Translator:  < >\n"
+"Language-Team: \n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
